# soupdev

./: .gitignore  LICENSE  README.md
.github/workflows/: cicd.yml
src/: .justfile  Cargo.toml  apigateway-payments.tf  apigateway.tf  dynamo-payments.tf  dynamo-users.tf  dynamo.tf  lambdas-payments.tf  lambdas-profile.tf  main.tf  output.tf  payments-apigateway.tf  payments-lambdas.tf  profile-lambdas.tf  profiles-apigateway.tf  s3.tf  stripe.tf  variables.tf
src/backend/: main.tf  profile-lambdas.tf  profiles-apigateway.tf  variables.tf
src/backend/profiles/: Cargo.toml
src/backend/profiles/src/lib/: user.rs
src/client/: package-lock.json  package.json
src/client/public/: index.html  manifest.json
src/client/src/: index.js
src/client/src/components/: donation.js  donationsContainer.js  payment.js
src/client/src/components/donations/: donation.js  donations.css  donationsContainer.js
src/client/src/pages/: paymentCancelled.js  paymentSuccessful.js  profile.css  profile.js
src/client/src/utils/: api.js
src/client/tf/: cloudfront.tf  main.tf  output.tf  route53.tf  s3.tf
src/common/: Cargo.toml  mod.rs
src/common/src/: user.rs
src/lambda_layer/: environment.rs  mod.rs  payment.rs  request_utils.rs  user.rs
src/payments/: Cargo.toml
src/payments/create_payment/: function.rs  main.rs
src/payments/get_payments/: function.rs  main.rs
src/payments/log_payment/: function.rs
src/payments/src/create_payment/: function.rs
src/payments/src/get_payments/: function.rs
src/payments/src/log_payment/: function.rs
src/payments/tf/: apigateway-payments.tf  lambdas-payments.tf  main.tf  stripe.tf  vars.tf
src/profiles/: Cargo.toml
src/profiles/get_profile/: function.rs  main.rs
src/profiles/src/get_profile/: function.rs
src/profiles/tf/: apigateway-profiles.tf  iam-lambda-profile.tf  lambdas-profile.tf  main.tf  output.tf  vars.tf
src/scripts/: build-lambdas.py
