[package]
name = "soupdev-payments"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "create_payment"
path = "src/create_payment/main.rs"

[[bin]]
doc = false
name = "log_payment"
path = "src/log_payment/main.rs"

[[bin]]
doc = false
name = "get_payments"
path = "src/get_payments/main.rs"

[dependencies]
async-stripe = { version = "0.13.0", default-features = false, features = ["runtime-async-std-surf", "billing", "webhook-events", "checkout"] }
openssl = { version = "0.10", features = ["vendored"] }
aws-config = "0.8.0"
aws-sdk-dynamodb = "0.8.0"
lambda_http = "0.5.1"
lambda_runtime = "0.5.0"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = "1.17.0"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4.19"

[dependencies.soupdev-common]
version = "0.1.0"
path = "../common"