[package]
name = "soupdev-profiles"
version = "0.1.0"
edition = "2021"

# Profiles
[[bin]]
doc = false
name = "get_profile"
path = "src/get_profile/main.rs"

[dependencies]
aws-config = "0.8.0"
aws-sdk-dynamodb = "0.8.0"
lambda_http = "0.5.1"
lambda_runtime = "0.5.0"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = "1.17.0"

[dependencies.soupdev-common]
version = "0.1.0"
path = "../common"