[package]
name = "profiles"
version = "0.1.0"
edition = "2021"

[lib]
name = "lambda_layer"
path = "src/lib/mod.rs"

[[bin]]
doc = false
name = "get_profile"
path = "src/bin/get_profile/main.rs"

[dependencies]
aws-config = "0.8.0"
aws-sdk-dynamodb = "0.8.0"
lambda_http = "0.5.1"
lambda_runtime = "0.5.0"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = "1.17.0"
